Update README with revised protocals based on new aquamaps files.

--- a/README.Rmd
+++ b/README.Rmd
@@ -25,7 +25,7 @@ In this work, we developed an approach based on species thermal niches to projec
 1. `data-raw` contains raw data for the project.
     * `spatial` contains spatial information.
         * `ne_110m_coastline` contains world coastline data from [Natural Earth](https://www.naturalearthdata.com/downloads/110m-physical-vectors/). 
-    * `sdm_aquamaps` contains raw [Aquamaps](https://www.aquamaps.org) species distribution model (SDM) predictions (maps) for all species in `aqqsstrans.csv` (see below), obtained from M.T.B. 
+    * `sdm_aquamaps` contains raw [Aquamaps](https://www.aquamaps.org) species distribution model (SDM) predictions (maps) for modelled species, obtained via `get_sdm_aquamaps.R` (see below); 
     * `temperature` contains sea surface temperature (SST) and sea bottom temperature (SBT) global scale CMIP5 ensemble average projections for (a) historical (1956-2005) (b) mid-century (2006-2055) and (c) late-century (2050-2099) time scales under Representative Concentration Pathways (RCPs) 4.5 and 8.5. All projections were obtained from [NOAA's Climate Change Web Portal](https://psl.noaa.gov/ipcc/ocn/). For SST, for the historical scenario, the [HADISST](https://www.metoffice.gov.uk/hadobs/hadisst/) dataset is also included for comparison to modelled scenarios.  
     <br />
 
@@ -42,6 +42,7 @@ In this work, we developed an approach based on species thermal niches to projec
     <br />
     
 3. `R` contains scripts for data processing, projections and analysis.
+    * `get_*` scripts get raw data, where necessary.  
     * `process_*` scripts implement data processing.
     * `project_*` scripts implement relative abundance projections. 
     * `analyse_*` scripts analyse the data and projections, including figure creation.  
@@ -54,6 +55,12 @@ Note that the `data-raw`, `data` and `fig` directories are not provided in the o
 
 ## Workflow 
 
+### Data acquisition via `get_*`
+
+1. `get_sdm_aquamaps.R` gets [Aquamaps](https://www.aquamaps.org) SDMs for modelled species, via the [`aquamapsdata`](https://github.com/raquamaps/aquamapsdata) `R` package. 
+
+2. Other raw data are acquired manually (see the links above). 
+
 ### Data processing via `process_*` 
 
 1. `process_coastline.R` processes the raw coastline data: 
@@ -63,15 +70,15 @@ Note that the `data-raw`, `data` and `fig` directories are not provided in the o
 2. `process_spptraits.R` defines a list of modelled species:
     * Focuses on the subset of species with depth ranges found on [FishBase](http://www.fishbase.org/search.php);
     * Checks for synonyms;
-    * Focuses on coastal species;
-    * Saves a temporary (reduced) list of species for which [Aquamaps](https://www.aquamaps.org) SDMs are processed (see `process_sdm_aquamaps.R`);
+    * Saves a temporary (reduced) list of species for which [Aquamaps](https://www.aquamaps.org) SDMs are acquired and then processed (see `get_sdm_aquamaps.R` and `process_sdm_aquamaps.R`);
     * Using processed species' distributions:
-        * Checks data quality for any species with few predicted occurrences;
+        * Checks SDMs;
         * Gets thermal niche parameters from processed temperature projections;
-        * For the final list of species, gets the full taxonomic breakdown;  
+        * Gets the full taxonomic breakdown;  
     <br />
     
 3. `process_sdm_aquamaps.R` processes [Aquamaps](https://www.aquamaps.org) species' distributions:
+    * Forces an extent of {-180, 180, -90, 90} to match temperature projections;  
     * Replaces 0 for predicted occurrence with NA;
     * Masks land using processed coastline;  
     <br />
@@ -79,6 +86,7 @@ Note that the `data-raw`, `data` and `fig` directories are not provided in the o
 4. `process_temp.R` processes temperature projections:
     * Extracts SST and SBT temperature projections from raw files; 
     * Forces an extent of {-180, 180, -90, 90} to match species' distributions;
+    * Re-samples temperatures to the same spatial resolution as species' distributions;
     * Masks land using processed coastline to match species' distributions;  
     <br />
     
