--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Modelling the impacts of climate change on the abundance of shallow-water marine fish at a global scale"
+title: "Modelling the impacts of climate change on the relative abundance of shallow-water marine fish at a global scale"
 author: Edward Lavender^1,2\*^, Clive J. Fox^1^ and Michael T. Burrows^1^ 
 output: github_document
 ---
@@ -16,36 +16,42 @@ developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.re
 
 ## Introduction 
 
-This repository contains methods, written in `R`, for Lavender, Fox and Burrows (in review). Modelling the impacts of climate change on the abundance of shallow-water marine fish at a global scale. 
+This repository contains methods, written in `R` and organised as an `R Project`, for Lavender, Fox and Burrows (in review). Modelling the impacts of climate change on the relative abundance of shallow-water marine fish at a global scale. 
 
-In this work, we developed an approach based on species thermal niches to project changes in the relative abundance of more than 2,000 shallow-water marine fish species under future temperature change scenarios.
+In this work, we developed an approach based on species' thermal niches to predict changes in the relative abundance of more than 2,000 shallow-water marine fish species under future temperature change scenarios (Figure 1).
+
+<img src="README_overview.png"/>
+
+_**Figure 1. An overview of the methods used to predict change in the relative abundance of shallow-water fish under future temperature change.** We started with a list of over 2000 shallow-water fish species. For each species, we overlaid a model of occurrence with baseline sea surface temperature (SST) or sea bottom temperature (SBT) data to estimate quantiles of observed variation in occupied temperatures, from which we inferred thermal affinities. For example, we took the median temperature across the species’ range (T50) as the optimum temperature for that species and the 10th and 90th percentiles as the species' thermal range, respectively. We used these to parameterise a Gaussian model relating temperature to an index of relative abundance, with a mean equal to the optimum temperature and a variance based on the thermal range. The central premise of this model is that species tend to be more abundant around thermal optima and less abundant elsewhere; this is known as the abundance-centre hypothesis. To predict change in the index of relative abundance, we fed this model with baseline and future temperatures derived from CMIP5 (Coupled Model Intercomparison Phase Project Phase 5) models. For populations living below the optimum temperature, in the blue half of the Gaussian distribution shown, an increase in temperature is assumed to lead to an increase in relative abundance. And for populations living above the optimum temperature, in the red half, an increase in temperature is assumed to lead to a decline in relative abundance. In this way, for every species, we predicted the index of relative abundance in each grid cell in which it currently occurs under baseline and future temperatures and calculated the change in the index of relative abundance. We then synthesised patterns across all species and exclusive economic zones._
 
 ## Structure 
 
 1. `data-raw` contains raw data for the project.
     * `spatial` contains spatial information.
         * `ne_110m_coastline` contains world coastline data from [Natural Earth](https://www.naturalearthdata.com/downloads/110m-physical-vectors/). 
-    * `sdm_aquamaps` contains raw [Aquamaps](https://www.aquamaps.org) species distribution model (SDM) predictions (maps) for modelled species, obtained via `get_sdm_aquamaps.R` (see below); 
-    * `temperature` contains sea surface temperature (SST) and sea bottom temperature (SBT) global scale CMIP5 ensemble average projections for (a) historical (1956-2005) (b) mid-century (2006-2055) and (c) late-century (2050-2099) time scales under Representative Concentration Pathways (RCPs) 4.5 and 8.5. All projections were obtained from [NOAA's Climate Change Web Portal](https://psl.noaa.gov/ipcc/ocn/). For SST, for the historical scenario, the [HADISST](https://www.metoffice.gov.uk/hadobs/hadisst/) dataset is also included for comparison to modelled scenarios.  
+    * `sdm_aquamaps` contains raw [Aquamaps](https://www.aquamaps.org) species distribution model (SDM) predictions (maps) for modelled species, obtained via `get_sdm_aquamaps.R` (see below). 
+    * `occurrence` contains raw occurrence data for modelled species, obtained via `process_sdm_aquamaps.R` (see below). 
+    * `temperature` contains sea surface temperature (SST) and sea bottom temperature (SBT) global-scale CMIP5 ensemble average projections for (a) historical (1956-2005), (b) mid-century (2006-2055) and (c) late-century (2050-2099) time scales under Representative Concentration Pathways (RCPs) 4.5 and 8.5. All projections were obtained from [NOAA's Climate Change Web Portal](https://psl.noaa.gov/ipcc/ocn/). For SST, for the historical scenario, the [HADISST](https://www.metoffice.gov.uk/hadobs/hadisst/) dataset is also included for comparison to modelled scenarios.  
     <br />
 
 2. `data` contains processed data. 
     * `spptraits.rds` defines modelled species. 
     * `spatial` contains processed spatial data. 
       * `coastline` contains world coastline data generated by `process_coastline.R`. 
-        * `eez` contains exclusive economic zone boundary data from the [Flanders Marine Institute](https://www.marineregions.org/eez.php) and datasets defining the number of modelled cells and species in each EEZ, generated by `process_eez.R` and `analyse_abund_across_eezs.R`. 
-        * `map_species_richness.asc` is a raster of the number of modelled species, generated by `analyse_spptraits.R`. 
-        * `sdm_aquamaps` contains processed [Aquamaps](https://www.aquamaps.org) SDMs for modelled species, generated by `process_aquamaps.R`. 
+      * `eez` contains Exclusive Economic Zone (EEZ) boundary data from the [Flanders Marine Institute](https://www.marineregions.org/eez.php) and datasets defining the number of modelled cells and species in each EEZ, generated by `process_eez.R`. 
+      * `species` contains species richness data; namely, `map_species_richness.asc`, a raster of the number of modelled species, generated by `analyse_spptraits.R`. 
+      * `sdm_aquamaps` contains processed [Aquamaps](https://www.aquamaps.org) SDMs for modelled species, generated by `process_aquamaps.R`. 
+      * `occurrence` contains processed occurrence data for modelled species, generated by `process_sdm_aquamaps.R`. 
     * `temperature` contains processed SST and SBT temperature projections for the time periods and scenarios described above, generated by `process_temp.R`. 
     * `sensitivity` contains processed 'sensitivity' rasters for modelled species, generated by `process_sensitivity.R`.
-    * `abundance` contains abundance predictions for SST and SBT for all temperature scenarios, generated by `project_abund.R` and `process_abund.R`.  
+    * `abundance` contains abundance predictions for SST and SBT for all temperature scenarios, generated by `project_abund_1.R`.  
     <br />
     
 3. `R` contains scripts for data processing, projections and analysis.
     * `get_*` scripts get raw data, where necessary.  
     * `process_*` scripts implement data processing.
-    * `project_*` scripts implement relative abundance projections. 
-    * `analyse_*` scripts analyse the data and projections, including figure creation.  
+    * `project_*` scripts implement relative abundance predictions. 
+    * `analyse_*` scripts analyse the data and predictions, including figure creation.  
     * `helper_*` scripts contain helper functions used in multiple scripts.  
     <br />
   
@@ -91,7 +97,7 @@ Note that the `data-raw`, `data` and `fig` directories are not provided in the o
     <br />
     
 5. `process_eez.R` processes EEZ data:
-    * Gets EEZ areas (in units of modelled grid cells); 
+    * Gets EEZ areas (in units of grid cells); 
     * Gets EEZ latitudinal mid-points;  
     <br />
     
@@ -102,7 +108,7 @@ Note that the `data-raw`, `data` and `fig` directories are not provided in the o
 
 ### Projections via `project_*()`
 
-1. `project_abund_1.R` projects changes in species' relative abundance under future climate change scenarios. 
+1. `project_abund_1.R` predicts changes in species' relative abundance under future climate change scenarios. 
 2. `project_abund_2.R` synthesises predictions across species. 
 
 ### Analyses via `analyse_*()` 
@@ -119,11 +125,19 @@ Note that the `data-raw`, `data` and `fig` directories are not provided in the o
 
 4. `analyse_sensitivity.R` analyses species' sensitivity indices. 
 
-5. `analyse_abund_across_globe.R` analyses relative abundance projections across the globe. 
+5. `analyse_abund_across_globe.R` analyses relative abundance predictions across the globe. 
 
-6. `analyse_abund_across_eezs.R` analyses relative abundance projections across EEZs. 
+6. `analyse_abund_across_eezs.R` analyses relative abundance predictions across EEZs. 
 
-7. `analyse_scenarios.R` analyses the relative severity of projections under RCP 4.5 and RCP 8.5. 
+7. `analyse_scenarios.R` analyses the relative severity of predictions under RCP 4.5 and RCP 8.5. 
+
+## GitHub packages
+
+This repository uses a number of non-default packages, available from [The Comprehensive R Archive Network](https://cran.r-project.org). These can be installed with `install.packages()`. Three packages that are only available on [GitHub](https://github.com/) are also used:
+
+* [`aquamapsdata`](https://github.com/raquamaps/aquamapsdata). This package is used to acquire SDMs for modelled species. 
+* [`prettyGraphics`](https://github.com/edwardlavender/prettyGraphics). This package is used for plotting, e.g., via `pretty_map()`. 
+* [`utils.add`](https://github.com/edwardlavender/utils.add). The `utils.add::basic_stats()` function is also sometimes used as a convenient routine for summarising numeric vectors. This could be replaced by base `R` functions, such as `summary()`. 
 
 ## Citation
 
