--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Modelling the impacts of climate change on the relative abundance of shallow-water marine fish at a global scale"
+title: "Modelling the impacts of climate change on thermal habitat suitability for shallow-water marine fish at a global scale"
 author: Edward Lavender^1,2\*^, Clive J. Fox^1^ and Michael T. Burrows^1^ 
 output: github_document
 ---
@@ -16,13 +16,13 @@ developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.re
 
 ## Introduction 
 
-This repository contains methods, written in `R` and organised as an `R Project`, for Lavender, Fox and Burrows (in review). Modelling the impacts of climate change on the relative abundance of shallow-water marine fish at a global scale. 
+This repository contains methods, written in `R` and organised as an `R Project`, for Lavender, Fox and Burrows (in review). Modelling the impacts of climate change on thermal habitat suitability for shallow-water marine fish at a global scale. 
 
-In this work, we developed an approach based on species' thermal affinities to predict changes in the relative abundance of more than 2,000 shallow-water marine fish species under future temperature change scenarios (Figure 1).
+In this work, we developed an approach based on species' thermal affinities to predict changes in thermal habitat suitability for more than 2,000 shallow-water marine fish species under future temperature change scenarios (Figure 1).
 
 <img src="README_overview.png"/>
 
-_**Figure 1. An overview of the methods used to predict change in the relative abundance of shallow-water fish under future temperature change.** We started with a list of over 2000 shallow-water fish species. For each species, we overlaid a model of occurrence with baseline sea surface temperature (SST) or sea bottom temperature (SBT) data to estimate quantiles of observed variation in occupied temperatures, from which we inferred thermal affinities. For example, we took the median temperature across the species’ range (the species' thermal index, STI) as the optimum temperature for that species and the 10th (T10) and 90th (T90) percentiles to define the species' thermal range (T90 - T10). We used these to parameterise a climate response curve: a Gaussian model relating temperature to an index of relative abundance, termed the climate response curve abundance index (CRCA), with a mean equal to the optimum temperature and a variance based on the thermal range. The central premise of this model is that species tend to be more abundant around thermal optima and less abundant elsewhere; this is known as the abundance-centre hypothesis. To predict change in the index of relative abundance, we fed this model with baseline and future temperatures derived from CMIP5 (Coupled Model Intercomparison Phase Project Phase 5) models. For populations living below the optimum temperature, in the blue half of the Gaussian distribution shown, an increase in temperature is assumed to lead to an increase in relative abundance. And for populations living above the optimum temperature, in the red half, an increase in temperature is assumed to lead to a decline in relative abundance. In this way, for every species, we predicted the relative abundance in each grid cell in which it currently occurs under baseline and future temperatures and calculated the change in relative abundance. We then synthesised patterns across all species and Exclusive Economic Zones._
+_**Figure 1. An overview of the methods used to predict change in thermal habitat suitability for shallow-water fish under future temperature change.** We started with a list of over 2000 shallow-water fish species. For each species, we overlaid a model of occurrence with baseline sea surface temperature (SST) or sea bottom temperature (SBT) data to estimate quantiles of observed variation in occupied temperatures, from which we inferred thermal affinities. For example, we took the median temperature across the species’ range (the species' thermal index, STI) as the optimum temperature for that species and the 10th (T10) and 90th (T90) percentiles to define the species' thermal range (T90 - T10). We used these to parameterise a climate response curve: a Gaussian model relating temperature to an index of thermal habitat suitability, termed the climate response curve thermal habitat suitabilty index (CRCS), with a mean equal to the optimum temperature and a variance based on the thermal range. The central premise of this model is that species have a thermal optima around which habitat suitability declines, an idea that is closely related to the abundance-centre hypothesis. To predict change in CRCS, we fed this model with baseline and future temperatures derived from CMIP5 (Coupled Model Intercomparison Phase Project Phase 5) models. For populations living below the optimum temperature, in the blue half of the Gaussian distribution shown, an increase in temperature is assumed to lead to an increase in thermal habitat suitability. And for populations living above the optimum temperature, in the red half, an increase in temperature is assumed to lead to a decline in thermal habitat suitability. In this way, for every species, we predicted the thermal habitat suitability in each grid cell in which it currently occurs under baseline and future temperatures and calculated the change in thermal habitat suitability. We then synthesised patterns across all species and Exclusive Economic Zones._
 
 ## Structure 
 
@@ -44,13 +44,13 @@ _**Figure 1. An overview of the methods used to predict change in the relative a
       * `occurrence` contains processed occurrence data for modelled species, generated by `process_sdm_aquamaps.R`. 
     * `temperature` contains processed SST and SBT temperature projections for the time periods and scenarios described above, generated by `process_temp.R`. 
     * `sensitivity` contains processed 'sensitivity' rasters for modelled species, generated by `process_sensitivity.R`.
-    * `abundance` contains abundance predictions for SST and SBT for all temperature scenarios, generated by `project_abund_1.R`.  
+    * `abundance` contains thermal habitat suitability predictions* for SST and SBT for all temperature scenarios, generated by `project_abund_1.R`.  
     <br />
     
 3. `R` contains scripts for data processing, projections and analysis.
     * `get_*` scripts get raw data, where necessary.  
     * `process_*` scripts implement data processing.
-    * `project_*` scripts implement relative abundance predictions. 
+    * `project_*` scripts implement thermal habitat suitability predictions. 
     * `analyse_*` scripts analyse the data and predictions, including figure creation.  
     * `helper_*` scripts contain helper functions used in multiple scripts.  
     <br />
@@ -108,7 +108,7 @@ Note that the `data-raw`, `data` and `fig` directories are not provided in the o
 
 ### Projections via `project_*()`
 
-1. `project_abund_1.R` predicts changes in species' relative abundance under future climate change scenarios. 
+1. `project_abund_1.R` predicts changes in species' thermal habitat suitability* under future climate change scenarios. 
 2. `project_abund_2.R` synthesises predictions across species. 
 
 ### Analyses via `analyse_*()` 
@@ -125,9 +125,9 @@ Note that the `data-raw`, `data` and `fig` directories are not provided in the o
 
 4. `analyse_sensitivity.R` analyses species' sensitivity indices. 
 
-5. `analyse_abund_across_globe.R` analyses relative abundance predictions across the globe. 
+5. `analyse_abund_across_globe.R` analyses thermal habitat suitability predictions* across the globe. 
 
-6. `analyse_abund_across_eezs.R` analyses relative abundance predictions across EEZs. 
+6. `analyse_abund_across_eezs.R` analyses thermal habitat suitability predictions* across EEZs. 
 
 7. `analyse_scenarios.R` analyses the relative severity of predictions under RCP 4.5 and RCP 8.5. 
 
@@ -141,4 +141,7 @@ This repository uses a number of non-default packages, available from [The Compr
 
 ## Citation
 
-Lavender, Fox and Burrows (in review). Modelling the impacts of climate change on the abundance of shallow-water marine fish at a global scale. 
+Lavender, Fox and Burrows (in review). Modelling the impacts of climate change on thermal habitat suitability for shallow-water marine fish at a global scale. 
+
+-------------------------------------------------
+*Predictions of the change in thermal habitat suitability are expected to correspond to changes in abundance, with species increasing in abundance in areas in which thermal habitat suitability increases and declining in areas in which thermal habitat suitability declines, hence the naming structure of these files. 
