Update README badge following paper publication.

--- a/README.Rmd
+++ b/README.Rmd
@@ -5,9 +5,7 @@ output: github_document
 ---
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
-[![Project Status: Active – The project has reached a stable, usable
-state and is being actively
-developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
+[![Project Status: Inactive – The project has reached a stable, usable state but is no longer being actively developed; support/maintenance will be provided as time allows.](https://www.repostatus.org/badges/latest/inactive.svg)](https://www.repostatus.org/#inactive)
 
 ^1^ The Scottish Association for Marine Science, Scottish Marine Institute, Dunstaffnage, Oban, Scotland, PA37 1QA  
 ^2^ Current Address: Centre for Research into Ecological and Environmental Modelling, The Observatory, University of St Andrews, Fife, Scotland, KY16 9LZ
